<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundLight"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:id="@+id/headSearchFragment"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/backSearchButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="11.65"
                android:background="@android:color/transparent"
                android:contentDescription="@string/imageButton"
                android:onClick="onClickBackButton"
                app:srcCompat="@drawable/ic_arrow_back_gray_24dp" />

            <EditText
                android:id="@+id/search_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="80"
                android:ems="10"
                android:hint="@string/searchHint"
                android:imeOptions="actionSearch"
                android:inputType="textPersonName"
                android:textColor="@color/textColorMain" />


            <android.support.constraint.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="12">

                <Button
                    android:id="@+id/playlistButton"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/ic_library_music_black_24dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:onClick="onPlaylistClick"
                    android:scaleType="centerInside"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="H,1:1"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"

                    tools:layout_editor_absoluteX="0dp" />
            </android.support.constraint.ConstraintLayout>

        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".90"
            android:background="@color/background">

            <TextView
                android:id="@+id/no_result_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="78dp"
                android:text="@string/noResult"
                android:textColor="@color/textColorMain"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/search_recycler_view"
                android:layout_width="0dp"
                android:layout_height="0dp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                app:layout_constraintVertical_bias="1.0"
                tools:layout_editor_absoluteX="0dp" />
        </android.support.constraint.ConstraintLayout>

</LinearLayout>

